# texture-forge

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  about.md  mod.json
include/TextureForge/: ArchiveManager.hpp  Common.hpp  IconEditorPopup.hpp  ImageProcessor.hpp  PackManager.hpp  TargetCatalog.hpp  TextureForgePopup.hpp
mod_history/: README.md
src/: ArchiveManager.cpp  Common.cpp  IconEditorPopup.cpp  ImageProcessor.cpp  PackManager.cpp  RuntimePlistLoader.cpp  TargetCatalog.cpp  TextureForgePopup.cpp  main.cpp  stb.cpp
